main.tf
# The Enterprise App (service principal) that exposes the role
data "azuread_service_principal" "aadds_sp" {
  display_name = "Azure AD Domain Services" # or use application_id = "<GUID>"
}

resource "azuread_group" "aaddc_admins" {
  display_name     = "AAD DC Administrators"
  security_enabled = true
}

# Pick the app role you want (example: "AAD DC Administrator" role)
locals {
  aadds_admin_role_id = one([
    for r in data.azuread_service_principal.aadds_sp.app_roles :
    r.id if r.value == "AADDCAdministrator" && r.enabled
  ])
}

resource "azuread_app_role_assignment" "eds" {
  principal_object_id = azuread_group.aaddc_admins.object_id   # the GROUP that receives the role
  resource_object_id  = data.azuread_service_principal.aadds_sp.object_id  # the SP exposing the role
  app_role_id         = local.aadds_admin_role_id
}

check "nsg_association" {
  data "azurerm_subnet" "eds" {
    name                 = split("/", var.subnet.id)[10]
    virtual_network_name = split("/", var.subnet.id)[8]
    resource_group_name  = split("/", var.subnet.id)[4]
  }

  assert {
    condition     = data.azurerm_subnet.eds.network_security_group_id == var.network_security_group.id
    error_message = "The provided subnet is not associated with the provided network security group."
  }
}

// Inbound NSG rules for Microsoft Support access. Without it EDS does not work.
resource "azurerm_network_security_rule" "AllowRD" {
  name                        = "AllowRD"
  priority                    = 201
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "3389"
  source_address_prefix       = "CorpNetSaw"
  destination_address_prefix  = "*"
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

resource "azurerm_network_security_rule" "AllowPSRemoting" {
  name                        = "AllowPSRemoting"
  priority                    = 301
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "5986"
  source_address_prefix       = "AzureActiveDirectoryDomainServices"
  destination_address_prefix  = "*"
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

// Outbound rules NSG for Microsoft Support access. Without it EDS does not work.
resource "azurerm_network_security_rule" "AzureActiveDirectoryDomainServices" {
  name                        = "Allow_Any_to_AzureActiveDirectoryDomainServices_HTTPS_Outbound"
  priority                    = 100
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "443"
  source_address_prefix       = "*"
  destination_address_prefix  = "AzureActiveDirectoryDomainServices"
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

resource "azurerm_network_security_rule" "AzureMonitor" {
  name                        = "Allow_Any_to_AzureMonitor_HTTPS_Outbound"
  priority                    = 110
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "443"
  source_address_prefix       = "*"
  destination_address_prefix  = "AzureMonitor"
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

resource "azurerm_network_security_rule" "Storage" {
  name                        = "Allow_Any_to_Storage_HTTPS_Outbound"
  priority                    = 120
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "443"
  source_address_prefix       = "*"
  destination_address_prefix  = "Storage"
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

resource "azurerm_network_security_rule" "MicrosoftEntraID" {
  name                        = "Allow_Any_to_MicrosoftEntraID_HTTPS_Outbound"
  priority                    = 130
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "443"
  source_address_prefix       = "*"
  destination_address_prefix  = "AzureActiveDirectory"
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

resource "azurerm_network_security_rule" "AzureUpdateDelivery" {
  name                        = "Allow_Any_to_AzureUpdateDelivery_HTTPS_Outbound"
  priority                    = 140
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "443"
  source_address_prefix       = "*"
  destination_address_prefix  = "AzureUpdateDelivery"
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

resource "azurerm_network_security_rule" "AzureFrontDoorFirstParty" {
  name                        = "Allow_Any_to_AzureFrontDoorFirstParty_HTTPS_Outbound"
  priority                    = 150
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "80"
  source_address_prefix       = "*"
  destination_address_prefix  = "AzureFrontDoor.FirstParty"
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

resource "azurerm_network_security_rule" "GuestAndHybridManagement" {
  name                        = "Allow_Any_to_GuestAndHybridManagement_HTTPS_Outbound"
  priority                    = 160
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "443"
  source_address_prefix       = "*"
  destination_address_prefix  = "GuestAndHybridManagement"
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

resource "azurerm_network_security_rule" "allow_subnet_to_subnet_outbound" {
  name                        = "Allow_Subnet_to_Subnet_Any_Outbound"
  priority                    = 170
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = one(var.subnet.address_prefixes)
  destination_address_prefix  = one(var.subnet.address_prefixes)
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

resource "azurerm_network_security_rule" "deny_all_outbound" {
  name                        = "Deny_All_Outbound"
  priority                    = 1000
  direction                   = "Outbound"
  access                      = "Deny"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = var.network_security_group.resource_group_name
  network_security_group_name = var.network_security_group.name
}

resource "azapi_resource" "eds" {
  type      = "Microsoft.AAD/domainServices@2022-12-01"
  name      = var.domain
  location  = var.location
  parent_id = var.resource_group_id
  tags      = var.tags
  body = {
    properties = {
      domainConfigurationType = var.domain_configuration_type
      domainName              = var.domain
      domainSecuritySettings = {
        channelBinding        = var.security_settings.channelBinding ? "Enabled" : "Disabled"
        kerberosArmoring      = var.security_settings.kerberosArmoring ? "Enabled" : "Disabled"
        kerberosRc4Encryption = var.security_settings.kerberosRc4Encryption ? "Enabled" : "Disabled"
        ldapSigning           = var.security_settings.ldapSigning ? "Enabled" : "Disabled"
        ntlmV1                = var.security_settings.ntlmV1 ? "Enabled" : "Disabled"
        syncKerberosPasswords = var.security_settings.syncKerberosPasswords ? "Enabled" : "Disabled"
        syncNtlmPasswords     = var.security_settings.syncNtlmPasswords ? "Enabled" : "Disabled"
        syncOnPremPasswords   = var.security_settings.syncOnPremPasswords ? "Enabled" : "Disabled"
        tlsV1                 = var.security_settings.tlsV1 ? "Enabled" : "Disabled"
      }
      filteredSync  = var.filtered_sync ? "Enabled" : "Disabled"
      ldapsSettings = local.ldaps_settings
      notificationSettings = {
        additionalRecipients = var.notification_settings.additionalRecipients
        notifyDcAdmins       = var.notification_settings.notifyAADDCAdmins ? "Enabled" : "Disabled"
        notifyGlobalAdmins   = var.notification_settings.notifyGlobalAdmins ? "Enabled" : "Disabled"
      }
      replicaSets = [
        {
          location = var.location
          subnetId = var.subnet.id
        }
      ]
      sku       = var.sku
      syncScope = var.sync_scope
    }
  }
  timeouts {
    create = "60m"
    delete = "60m"
  }
}


check "edc_security_configuration" {
  assert {
    condition     = var.security_settings.channelBinding == true
    error_message = "LDAP signing should be enabled."
  }
  assert {
    condition     = var.security_settings.kerberosArmoring == true
    error_message = "Kerberos armoring should be enabled."
  }
  assert {
    condition     = var.security_settings.kerberosRc4Encryption == false
    error_message = "Kerberos RC4 encryption is old and should be disabled for EDS."
  }
  assert {
    condition     = var.security_settings.ldapSigning == true
    error_message = "LDAP signing should be enabled."
  }
  assert {
    condition     = var.security_settings.ntlmV1 == false
    error_message = "NTLMv1 is old and should be disabled."
  }
  assert {
    condition     = var.security_settings.tlsV1 == false
    error_message = "TLSv1 is old and should be disabled."
  }
  assert {
    condition     = local.ldaps_settings.ldaps == "enabled"
    error_message = "LDAPS should be enabled."
  }
}
